Making tests parameterized for new feature flag.